Reading fasta reference (#20)
* added reading fasta reference implementation

* added lfs support

* improved tests

* added read fasta impl